# playground

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  make.bat  ui.xml
glfw/: CMakeLists.txt
resources/: ui.xml
resources/fonts/: v.fnt  vb.fnt
resources/shaders/: flat2d_fragment.c  flat2d_vertex.c  font_fragment.c  font_vertex.c
src/: adaptors.h  bind.cpp  bind.h  containers  containers.cpp  containers.h  controls.cpp  controls.h  flat2d.cpp  flat2d.h  font.cpp  font.h  main.cpp  nonvisual.h  parser.cpp  parser.h  render.h  serializer.cpp  serializer.h  shader.cpp  shader.h  types.h  ui.cpp  ui.h
